chore: Upgrade to jdk 21 (#93)