@@ -86,9 +86,9 @@ public class SqlAction implements Action {
             });
 
             if (statements.size() == 1) {
-                outputs.put("affectedRows", records.get(0).affectedRows);
-                outputs.put("rows", records.get(0).rows()); // All rows result from the first statement only
-                outputs.put("firstRow", records.get(0).rows().get(0)); // First row of the first statement
+                outputs.put("affectedRows", records.getFirst().affectedRows);
+                outputs.put("rows", records.getFirst().rows()); // All rows result from the first statement only
+                outputs.put("firstRow", records.getFirst().rows().get(0)); // First row of the first statement
                 outputs.put("recordResult", records); // List of all results from each statement // TODO - remove after user migration
             } else {
                 outputs.put("recordResult", records); // List of all results from each statement
